--- a/proyecto-Clopix/src/views/index.ejs
+++ b/proyecto-Clopix/src/views/index.ejs
@@ -17,12 +17,12 @@
                     <section class="Ofertas">
                         <article>
                             <div class="imagenProducto">
-                              <img src="/images/KyotoPastel-BomberJacketFront_180x.png" alt="" width="360">
+                              <img src="/images/product/promo1.png" alt="" width="360">
                             </div>
 
                                 
                       <div class="nombre-precio"> 
-                                    <p class="nombreProducto-Precio">CHAQUETA BOMBER $4550 ARS </p>
+                                    <p class="nombreProducto-Precio">CHAQUETA BOMBER <br> $4550 ARS </p>
                                 </div>
                          <!--   <i class="fas fa-truck"></i> -->
                             </div>
@@ -30,22 +30,22 @@
 
                         <article>
                             <div class="imagenProducto">
-                               <img src="/images/7F_180x.png" alt="" >
+                               <img src="/images/product/promo3.png" alt="" >
                             </div>
 
                               <div class="nombre-precio"> 
-                                    <p class="nombreProducto-Precio">VICE CAMISA HAWAIANA  $1500 ARS</p>
+                                    <p class="nombreProducto-Precio">VICE CAMISA HAWAIANA <br>$1500 ARS</p>
                                 </div>
                              <!--   <i class="fas fa-truck"></i> -->
                             </div>
                         </article>
                         <article>
                             <div class="imagenProducto">
-                              <img src="/images/NewChallengerall_over_print_hoodieFRONT_180x.png" alt="">
+                              <img src="/images/product/p3.png" alt="">
                             </div>
 
                                <div class="nombre-precio"> 
-                                    <p class="nombreProducto-Precio">SUDADERA NEW CHALLENGER $23990 ARS </p>
+                                    <p class="nombreProducto-Precio">SUDADERA NEW CHALLENGER<br> $23990 ARS </p>
                                 </div>
                               <!--<i class="fas fa-truck"></i>-->
                             </div>
