--- a/proyecto-Clopix/public/css/styless.css
+++ b/proyecto-Clopix/public/css/styless.css
@@ -322,6 +322,8 @@ body#bodyCatalogo section.Productos{
     height: 45vh;
     text-align: center;
     border: 1px solid #99DDCC;
+    margin:0 100px;
+   
   }
   #bodyHome main section.Ofertas article div.imagenProducto{
     height:85%;
